gif animated logo

--- a/res/logo/anim/animatedlogolegacy.tex
+++ b/res/logo/anim/animatedlogolegacy.tex
@@ -1,4 +1,5 @@
 % made with PGFPlotsEdt
+% legacy animation
 \documentclass{article}
 \usepackage{pgfplots}
 \usepackage{animate}
@@ -9,7 +10,7 @@
 \tikzexternalize
 \begin{document}
 \begin{animateinline}{30}
-    \multiframe{45}{ind=0+1}{
+    \multiframe{5}{ind=0+1}{
         \tikzifexternalizing{%
         Work-around to make animate happy
         }{}%
@@ -21,7 +22,7 @@
             view={\ind}{0},
             axis z line={none},
             colormap/Greens]
-             \addplot3 [domain=0:2*pi,color=green!25!black!50!white,mesh,line width=1.8pt,samples=100,samples y=0,] ({(0.5+\ind/90)*1.18*cos(deg(x))},{(0.5+\ind/90)*1.18*cos(deg(x))},{\ind/45*0.7*sin(deg(x))-0.15});
+             \addplot3 [domain=0:2*pi,color=green!25!black!50!white,mesh,line width=1.8pt,samples=100,samples y=0,] ({(0.5+\ind/90)*1.18*cos(deg(x))},{(0.25+\ind/180)*1.18*cos(deg(x))},{\ind/45*0.7*sin(deg(x))-0.15});
              \addplot3 [domain=-1.5:1.5,surf,opacity=0.75] {exp(-x^2/2-y^2/2)-0.7};
             \end{axis}
         \end{tikzpicture}
