--- a/res/logo/logo.tex
+++ b/res/logo/logo.tex
@@ -1,5 +1,5 @@
 % made with PGFPlotsEdt
-\documentclass[tikz]{standalone}
+\documentclass[tikz,margin=5pt]{standalone}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.17}
 \usepgfplotslibrary{colorbrewer}
@@ -14,7 +14,7 @@ view={45}{0},
 axis z line={none},
 colormap/Greens]
  \addplot3 [domain=0:2*pi,color=green!25!black!50!white,mesh,line width=1.8pt,samples=100,samples y=0,] ({1.18*cos(deg(x))},{1.18*cos(deg(x))},{0.7*sin(deg(x))-0.15});
- \addplot3 [domain=-1.5:1.5,surf,opacity=0.75] {exp(-x^2/2-y^2/2)-0.7};
+ \addplot3 [domain=-1.5:1.5,surf,shader=flat] {exp(-x^2/2-y^2/2)-0.7};
 \end{axis}
 \end{tikzpicture}
 \end{document}
