--- a/res/logo/logo.tex
+++ b/res/logo/logo.tex
@@ -1,7 +1,7 @@
 % made with PGFPlotsEdt
 \documentclass[tikz,margin=5pt]{standalone}
 \usepackage{pgfplots}
-\pgfplotsset{compat=1.17}
+\pgfplotsset{compat=newest}
 \usepgfplotslibrary{colorbrewer}
 \usepgfplotslibrary{colormaps}
 \begin{document}
