--- a/res/tpl/tex/4.tex
+++ b/res/tpl/tex/4.tex
@@ -4,7 +4,7 @@
 \begin{document}
 \begin{tikzpicture}
 \begin{axis}[]
- \addplot [ybar,green,fill=green] coordinates {(1,0.86) (2,0.85) (3,0.845) (4,0.84) (5,0.83)};
+ \addplot [ybar,draw=green!40!black,fill=green!70!black] coordinates {(1,0.86) (2,0.85) (3,0.845) (4,0.84) (5,0.83)};
 \end{axis}
 \end{tikzpicture}
 \end{document}
