--- a/lang/cn.json
+++ b/lang/cn.json
@@ -1,7 +1,7 @@
 {
+  "PGFPlotsEdt": "PGFPlots 统计绘图编辑器",
+  "Faster to PGFPlot in LaTeX": "PGFPlotsEdt",
   "nav": {
-    "title": "PGFPlots 统计绘图编辑器",
-    "subtitle": "PGFPlotsEdt",
     "lang": "简体中文",
     "lang_icon": "CN",
     "lang_title": "切换语言",
@@ -17,5 +17,104 @@
     "tpl8": "直方图",
     "tpl9": "箱式图",
     "tpl10": "极坐标"
+  },
+  "Compile": "编译",
+  "Axis": "坐标系",
+  "axis": {
+    "global": "全局参量",
+    "type": "轴类型",
+    "normal": "普通坐标轴",
+    "logx": "x对数轴",
+    "logy": "y轴",
+    "loglog": "双对数轴",
+    "polar": "极坐标轴",
+    "title": "标题",
+    "width": "宽度",
+    "height": "高度",
+    "fontsize": "字号",
+    "grid": "网格",
+    "rotateAngle": "旋转角度",
+    "x": "x轴",
+    "label": "轴题",
+    "min": "最小",
+    "max": "最大",
+    "arrow": "箭头",
+    "y": "y轴",
+    "z": "z轴",
+    "legendPos": "图例位置",
+    "verticalAngle": "竖直旋转",
+    "horizontalAngle": "水平旋转",
+    "surplusparam": "增补参数"
+  },
+  "Settings": "设定",
+  "Data": "数据",
+  "settings": {
+    "CJK": "启用中文",
+    "Pin": "启用标注",
+    "3D": "启用三维",
+    "Legend": "启用图例",
+    "Source": "启用数据源",
+    "plotmarks": "标记库",
+    "colorbrewer": "颜色库",
+    "colormaps": "渐变库",
+    "CMYK": "CMYK模式",
+    "statistics": "统计库",
+    "fillbetween": "间隙填充库",
+    "polar": "极坐标库",
+    "dateplot": "日期库"
+  },
+  "Series": "+ 系列",
+  "data": {
+    "source": "表源",
+    "function": "函数",
+    "coordinate": "坐标",
+    "table": "文件",
+    "pin": "标注"
+  },
+  "Code": "代码",
+  "code": {
+    "cpydraw": "复制绘图代码",
+    "cpyall": "复制全部代码",
+    "manedt": "手动编辑代码"
+  },
+  "Parameter Settings": "\n参数设置\n",
+  "series": {
+    "fn": "函数",
+    "showLayer": "显示图层",
+    "top": "置于顶层",
+    "delete": "删除系列",
+    "td": "三维坐标",
+    "style": "样式连续",
+    "area": "循环面积",
+    "paramter": "参数",
+    "funcx": "函数式(x)",
+    "funcy": "y轴",
+    "funcz": "z轴",
+    "coord": "坐标数据",
+    "coordinate": "坐标",
+    "source": "表源",
+    "deletesource": "删除表源",
+    "table": "文件",
+    "tableparam": "表参数",
+    "tabledata": "数据文件",
+    "datatable": "数据表",
+    "pin": "标注",
+    "deletepin": "删除标注",
+    "pinyellow": "黄色标注",
+    "rotatepin": "旋转角度",
+    "pinpos": "标注位置"
+  },
+  "bar": {
+    "enter": "x y 按回车添加项",
+    "sortUp": "按自变量升序对坐标进行排序",
+    "sort": "排序",
+    "grouping": "按y轴升序对坐标进行分组，配合surf或mesh指令",
+    "group": "分组",
+    "formatting": "按照顺序使用括号标记坐标",
+    "format": "格式正规化",
+    "grid": "绘制曲面图需要网格状的坐标量",
+    "narray": "⚠不是矩阵",
+    "tableparam": "表格参数",
+    "col": "表列"
   }
 }
