--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
+  "PGFPlotsEdt": "PGFPlotsEdt",
+  "Faster to PGFPlot in LaTeX": "Faster to PGFPlot in LaTeX",
   "nav": {
-    "title": "PGFPlotEdt",
-    "subtitle": "Faster to PGFPlot in LaTeX",
     "lang": "English",
     "lang_icon": "EN",
     "lang_title": "Change language",
@@ -17,5 +17,104 @@
     "tpl7": "Contour",
     "tpl8": "Histogram",
     "tpl9": "Boxplot"
+  },
+  "Compile": "Compile",
+  "Axis": "Axis",
+  "axis": {
+    "global": "Global Parameters",
+    "type": "Type",
+    "normal": "axis",
+    "logx": "semilogxaxis",
+    "logy": "semilogyaxis",
+    "loglog": "loglogaxis",
+    "polar": "ploaraxis",
+    "fontsize": "Fontsize",
+    "grid": "Grid",
+    "height": "Height",
+    "rotateAngle": "Rotation",
+    "title": "Title",
+    "width": "Width",
+    "arrow": "Arrow",
+    "label": "Label",
+    "max": "Max",
+    "min": "Min",
+    "x": "X Axis",
+    "y": "Y Axis",
+    "z": "Z Axis",
+    "legendPos": "Legend Position",
+    "horizontalAngle": "HA",
+    "surplusparam": "surplus parameters",
+    "verticalAngle": "VA"
+  },
+  "Settings": "Settings",
+  "settings": {
+    "CJK": "CJK",
+    "Legend": "Legend",
+    "Pin": "Pin",
+    "Source": "Source",
+    "3D": "3D",
+    "colorbrewer": "colorbrewer",
+    "colormaps": "colormaps",
+    "dateplot": "dateplot",
+    "fillbetween": "fillbetween",
+    "plotmarks": "plotmarks",
+    "polar": "polar",
+    "statistics": "statistics",
+    "CMYK": "CMYK"
+  },
+  "Data": "Data",
+  "Series": "+ Series",
+  "data": {
+    "coordinate": "coord",
+    "function": "function",
+    "pin": "pin",
+    "source": "source",
+    "table": "table"
+  },
+  "Code": "Code",
+  "code": {
+    "cpyall": "Copy all code to clipboard",
+    "cpydraw": "Copy draw code to clipboard",
+    "manedt": "Edit code manually"
+  },
+  "Parameter Settings": "Parameter Settings",
+  "series": {
+    "fn": "fn",
+    "showLayer": "Show Layer",
+    "area": "Fill the area",
+    "delete": "Delete series",
+    "funcx": "function(x)",
+    "funcy": "y axis",
+    "funcz": "z axis",
+    "paramter": "parameter",
+    "style": "In cycle list",
+    "td": "3D",
+    "top": "Put it to top",
+    "coord": "coord",
+    "coordinate": "cr",
+    "datatable": "sr",
+    "deletesource": "Delete source",
+    "source": "sr",
+    "table": "tb",
+    "tabledata": "Table data",
+    "tableparam": "table parameters",
+    "deletepin": "Delete pin",
+    "pin": "pn",
+    "pinpos": "pin position",
+    "pinyellow": "Yellow pin",
+    "rotatepin": "pin rotate"
+  },
+  "bar": {
+    "enter": "x y enter",
+    "sortUp": "Sort coordinates based on x",
+    "col": "Col",
+    "format": "Format",
+    "formatting": "Format numbers into coordinates by adding parentheses",
+    "grid": "Arrayed coordinates is nessary for plotting surf and mesh",
+    "group": "Group",
+    "grouping": "Sort coordinates by y axis to input into surf or mesh",
+    "narray": "⚠ Not Array",
+    "sort": "Sort",
+    "tableparam": "Table Parameter"
   }
 }
