--- a/lang/cn.json
+++ b/lang/cn.json
@@ -115,6 +115,7 @@
     "grid": "绘制曲面图需要网格状的坐标量",
     "narray": "⚠不是矩阵",
     "tableparam": "表格参数",
-    "col": "表列"
+    "col": "表列",
+    "coord": "坐标数据"
   }
 }
