--- a/docs/figs/interface.tex
+++ b/docs/figs/interface.tex
@@ -1,4 +1,5 @@
-\documentclass[tikz,dvisvgm]{standalone}
+\PassOptionsToClass{tikz}{standalone}
+\documentclass{ppedt-docfig}
 \begin{document}
 \begin{tikzpicture}
 \draw [thick]  (-3,2.5) node (v1) {} rectangle (7.5,-4.5) node (v4) {};
