docs: add short comments for usage

--- a/docs/pgfplotsedt.tex
+++ b/docs/pgfplotsedt.tex
@@ -1,4 +1,6 @@
 % ! TeX program = lualatex
+% Use `l3build doc` to compile the documentation.
+% Set the environment variable PPEDT_LANG to choose the language to compile.
 
 \documentclass{l3doc}
 
