--- a/docs/figs/interface.tex
+++ b/docs/figs/interface.tex
@@ -7,9 +7,9 @@
 \draw [fill=green!20] (-3,1) rectangle (0.5,-4.5) node (v2) {};
 \draw [fill=green!10] (v2) rectangle (4,1) node (v3) {};
 \draw [fill=green!5] (v3) rectangle (v4);
-\node at (2.5,1.7) {Navigation};
-\node at (5.8,-1.5) {Code};
-\node at (2.3,-1.5) {Data};
-\node at (-1.25,-1.5) {Preview};
+\node at (2.5,1.7) {\directlua{tex.write(trans["doc"]["Navigation"])}};
+\node at (5.8,-1.5) {\directlua{tex.write(trans["Code"])}};
+\node at (2.3,-1.5) {\directlua{tex.write(trans["Data"])}};
+\node at (-1.25,-1.5) {\directlua{tex.write(trans["doc"]["Preview"])}};
 \end{tikzpicture}
 \end{document}
